[package]
name = "global-common"
version = "0.1.0"
edition = "2021"

[features]
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"

url = { version = "2.5", features = ["serde"] }
num_enum = "0.7"
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
uuid = { version = "1.8", features = ["v7", "serde"] }

thiserror = "1.0"
eyre = "0.6"

sqlx = { version = "0.7", features = ["macros", "uuid"], optional = true }
